--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,7 +9,7 @@
   ~ (See accompanying file LICENSE.txt)
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Ex02_ViewBinding" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
